# lcd1602

./: CMakeLists.txt  README.md
inc/: lcd_ctrl.h  lcd_io.h
src/: lcd.c  lcd_ctrl.c  lcd_io.c
